<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestBC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="testBC">Test BC</string>
    <string name="showBC">Show BC Result</string>
    <string name="registerReceiver">registerReceiver</string>
    <string name="unregisterReceiver">unregisterReceiver</string>
</resources>
